# otus_cpp_08

./: .travis.yml  CMakeLists.txt  README.md
src/: 1196_History_Exam.cpp  1496_Spammer.cpp  1545_Hieroglyphs.cpp  1837.The_number_of_Isenbayev.cpp  1837_The_number_of_Isenbayev.cpp
